Wire in the last secret credential (github status secret); add a Dockerfile used for deployment testing; make user-friendly error messages for credentials misconfig.

--- a/master.cfg
+++ b/master.cfg
@@ -2,24 +2,50 @@
 # ex: set syntax=python:
 
 import os, json, errno
-from textwrap import dedent
+from textwrap import dedent, wrap
 from buildbot.status import html
 from buildbot.status.web import authz, auth
-from buildbot.plugins import buildslave, changes, schedulers, status, steps, util
+from buildbot.plugins import buildslave, schedulers, status, steps, util
 from buildbot.changes.filter import ChangeFilter
-from buildbot.plugins import status, util
 
 
-def read_path(path):
-    with file(os.path.expanduser(path), 'r') as f:
-        return r.read()
+def notify(tmpl, *args, **kw):
+    """Print a big obvious banner. Reformats msg to allow indented triple-strings."""
+    msg = tmpl.format(*args, **kw)
+    print ' ***'
+    print ' *** ' + ('\n *** '.join(wrap(dedent(msg))).strip())
+    print ' ***'
+
+def _read_path(path):
+    with file(path, 'r') as f:
+        return f.read()
+
+def read_optional_path(path):
+    try:
+        return _read_path(path)
+    except IOError as e:
+        if e.errno == errno.ENOENT:
+            return None
+        else:
+            raise
+
+def read_required_path(path, description):
+    result = read_optional_path(path)
+    if result is not None:
+        return result
+
+    print ' ***'
+    print ' *** Could not read: {!r}'.format(path)
+    notify(description)
+    e = IOError('{}: {!r}'.format(os.strerror(errno.ENOENT), path))
+    e.errno = errno.ENOENT
+    raise e
 
 def read_or_generate_secret(path, githubsecret):
-    try:
-        return read_path(path)
-    except IOError as e:
-        if e.errno != errno.ENOENT:
-            raise
+    result = read_optional_path(path)
+    if result is not None:
+        return result
+
     # File doesn't exist:
     SECRET_BYTES = 10
     value = os.urandom(SECRET_BYTES).encode('base64').strip().rstrip('=')
@@ -27,14 +53,15 @@ def read_or_generate_secret(path, githubsecret):
         f.write(value)
 
     if githubsecret:
-        print dedent('''
+        notify(
+            '''
             NOTE: The secret {!r} was just auto-generated. You must
             configure the relevant github repositories and add it as
-            the webhook secret.'
-        '''.strip())
+            the webhook secret.
+            ''',
+            path)
 
     return value
-
 
 def sh(*argv, **kw):
     name = kw.pop('name', os.path.basename(argv[0]))
@@ -42,12 +69,17 @@ def sh(*argv, **kw):
     return steps.ShellCommand(name=name, description=name, command=argv)
 
 
+eu = os.path.expanduser
+
 # Read some external configuration to help with
 # credentials-config-management:
-SLAVE_NAME = read_path('~/slave.name')
-SLAVE_PASS = read_or_generate_secret('~/slave.password', false)
-GH_WEBHOOK_SECRET = read_or_generate_secret('~/github.webhook-secret', true)
-GH_STATUS_TOKEN = read_path('~/github.status-secret')
+SLAVE_NAME = 'builder-0'
+SLAVE_PASS = read_or_generate_secret(eu('~/slave.password'), False)
+GH_WEBHOOK_SECRET = read_or_generate_secret(eu('~/github.webhook-secret'), True)
+GH_STATUS_TOKEN = read_required_path(
+    eu('~/github.status-secret'),
+    'This path must contain a GitHub token granting status update capabilities.',
+)
 WEB_CREDS = json.loads(read_path('~/webcreds.json'))
 
 
@@ -183,7 +215,7 @@ BuildmasterConfig = {
             },
         ),
         status.GitHubStatus(
-            token='REDACTED',
+            token=GH_STATUS_TOKEN,
             repoOwner=util.Interpolate("%(prop:github_repo_owner)s"),
             repoName=util.Interpolate("%(prop:github_repo_name)s"),
             sha=util.Interpolate("%(src::revision)s"),
