Write a routine to massage the webcreds.json values into the appropriate format for buildbot.

--- a/master.cfg
+++ b/master.cfg
@@ -63,6 +63,27 @@ def read_or_generate_secret(path, githubsecret):
 
     return value
 
+def load_webcreds(path):
+    filedesc = 'A json file with an array, each element is [username, password]'
+    jsoncreds = json.loads(read_required_path(path, filedesc))
+    creds = []
+    try:
+        for entry in jsoncreds:
+            [username, password] = entry
+            username = username.encode('utf8')
+            password = password.encode('utf8')
+            entry = (username, password)
+            creds.append(entry)
+    except:
+        notify(
+            'There was a JSON format error loading {!r}, which should be: {}',
+            path,
+            filedesc,
+        )
+        raise
+    else:
+        return creds
+
 def sh(*argv, **kw):
     name = kw.pop('name', os.path.basename(argv[0]))
     assert kw == {}, 'Unexpected keywords: {!r}'.format(kw)
@@ -80,7 +101,7 @@ GH_STATUS_TOKEN = read_required_path(
     eu('~/github.status-secret'),
     'This path must contain a GitHub token granting status update capabilities.',
 )
-WEB_CREDS = json.loads(read_path('~/webcreds.json'))
+WEB_CREDS = load_webcreds(eu('~/webcreds.json'))
 
 
 BuildmasterConfig = {
