Fix a bug with SLAVE_NAME; fix Docker bug in slave launch (and install the missing package).

--- a/master.cfg
+++ b/master.cfg
@@ -168,7 +168,7 @@ BuildmasterConfig = {
     'builders': [
         util.BuilderConfig(
             name="zerocashd",
-            slavenames=["example-slave"],
+            slavenames=[SLAVE_NAME],
             factory=util.BuildFactory([
                 steps.Git(
                     repourl='git@github.com:Electric-Coin-Company/zerocashd',
@@ -184,7 +184,7 @@ BuildmasterConfig = {
         ),
         util.BuilderConfig(
             name="libzerocash",
-            slavenames=["example-slave"],
+            slavenames=[SLAVE_NAME],
             factory=util.BuildFactory([
                 steps.Git(
                     repourl='https://github.com/Electric-Coin-Company/libzerocash',
