--- a/master.cfg
+++ b/master.cfg
@@ -226,7 +226,7 @@ BuildmasterConfig = {
         status.IRC(
             host='irc.oftc.net',
             nick='zcbuildbot',
-            channels=['#leastauthority'],
+            channels=['#zerocash'],
             notify_events={
                 'exception': True,
                 'failure': True,
