Pass these hand-deployed paths to full-test-suite.sh (ref: https://github.com/Electric-Coin-Company/zerocashd/issues/378)

--- a/master.cfg
+++ b/master.cfg
@@ -175,7 +175,7 @@ BuildmasterConfig = {
                     mode='incremental',
                 ),
                 sh('./zcutil/build.sh', '-j4'),
-                sh('./qa/zerocash/full-test-suite.sh'),
+                sh('./qa/zerocash/full-test-suite.sh', '/data/zc-testnet-alpha-proving.key', '/data/zc-testnet-alpha-verification.key'),
             ]),
             properties={
                 "github_repo_owner": "Electric-Coin-Company",
