Disable ShellCommand timeout altogether. We need to notice and manually fix any hung shell commands!

--- a/master.cfg
+++ b/master.cfg
@@ -87,7 +87,12 @@ def load_webcreds(path):
 def sh(*argv, **kw):
     name = kw.pop('name', os.path.basename(argv[0]))
     assert kw == {}, 'Unexpected keywords: {!r}'.format(kw)
-    return steps.ShellCommand(name=name, description=name, command=argv)
+    return steps.ShellCommand(
+        name=name,
+        description=name,
+        command=argv,
+        timeout=None,
+    )
 
 
 eu = os.path.expanduser
