--- a/master.cfg
+++ b/master.cfg
@@ -181,6 +181,7 @@ BuildmasterConfig = {
                 ),
                 sh('./zcutil/build.sh', '-j4'),
                 sh('./qa/zerocash/full-test-suite.sh', '/data/zc-testnet-alpha-proving.key', '/data/zc-testnet-alpha-verification.key'),
+                sh('echo', 'diagnostic echo at end of zerocashd BuilderConfig...'),
             ]),
             properties={
                 "github_repo_owner": "Electric-Coin-Company",
