Run full-test-suite.sh instead of individual tests.

--- a/master.cfg
+++ b/master.cfg
@@ -198,9 +198,7 @@ BuildmasterConfig = {
                 ),
                 sh('./get-libsnark'),
                 sh('make', '-j4'),
-                sh('./tests/merkleTest'),
-                sh('./tests/zerocashTest'),
-                sh('./zerocash_pour_ppzksnark/tests/test_zerocash_pour_ppzksnark'),
+                sh('./tests/full-test-suite.sh'),
             ]),
             properties={
                 "github_repo_owner": "Electric-Coin-Company",
