--- a/master.cfg
+++ b/master.cfg
@@ -180,7 +180,11 @@ BuildmasterConfig = {
                     mode='incremental',
                 ),
                 sh('./zcutil/build.sh', '-j4'),
-                sh('./qa/zerocash/full-test-suite.sh', '/data/zc-testnet-alpha-proving.key', '/data/zc-testnet-alpha-verification.key'),
+                sh('sh', '-c',
+                   '[ -f ./zcutil/fetch-params.sh ] && ./zcutil/fetch-params.sh'),
+                sh('./qa/zerocash/full-test-suite.sh',
+                   '/data/zc-testnet-alpha-proving.key',
+                   '/data/zc-testnet-alpha-verification.key'),
             ]),
             properties={
                 "github_repo_owner": "Electric-Coin-Company",
