Give the conditional execution of ``fetch-params.sh`` and explicit name instead of default ``sh``.

--- a/master.cfg
+++ b/master.cfg
@@ -181,7 +181,9 @@ BuildmasterConfig = {
                 ),
                 sh('./zcutil/build.sh', '-j4'),
                 sh('sh', '-c',
-                   '[ -f ./zcutil/fetch-params.sh ] && ./zcutil/fetch-params.sh'),
+                   '[ -f ./zcutil/fetch-params.sh ] && ./zcutil/fetch-params.sh',
+                   name='fetch-params.sh (optional)',
+                ),
                 sh('./qa/zerocash/full-test-suite.sh',
                    '/data/zc-testnet-alpha-proving.key',
                    '/data/zc-testnet-alpha-verification.key'),
