--- a/master.cfg
+++ b/master.cfg
@@ -181,7 +181,7 @@ BuildmasterConfig = {
                 ),
                 sh('./zcutil/build.sh', '-j4'),
                 sh('sh', '-c',
-                   '[ -f ./zcutil/fetch-params.sh ] && ./zcutil/fetch-params.sh'),
+                   'if [ -f ./zcutil/fetch-params.sh ]; then ./zcutil/fetch-params.sh; fi'),
                 sh('./qa/zerocash/full-test-suite.sh',
                    '/data/zc-testnet-alpha-proving.key',
                    '/data/zc-testnet-alpha-verification.key'),
