Set the name of the fetch-params.sh step.

--- a/master.cfg
+++ b/master.cfg
@@ -181,7 +181,8 @@ BuildmasterConfig = {
                 ),
                 sh('./zcutil/build.sh', '-j4'),
                 sh('sh', '-c',
-                   'if [ -f ./zcutil/fetch-params.sh ]; then ./zcutil/fetch-params.sh; fi'),
+                   'if [ -f ./zcutil/fetch-params.sh ]; then ./zcutil/fetch-params.sh; fi',
+                   name='fetch-params.sh (optional)'),
                 sh('./qa/zerocash/full-test-suite.sh',
                    '/data/zc-testnet-alpha-proving.key',
                    '/data/zc-testnet-alpha-verification.key'),
