--- a/master.cfg
+++ b/master.cfg
@@ -179,7 +179,7 @@ BuildmasterConfig = {
                     repourl='git@github.com:Electric-Coin-Company/zerocashd',
                     mode='incremental',
                 ),
-                sh('git', 'clean', '-dfx'),
+                sh('git', 'clean', '-dfx', name='git clean'),
                 sh('./zcutil/build.sh', '-j4'),
                 sh('sh', '-c',
                    'if [ -f ./zcutil/fetch-params.sh ]; then ./zcutil/fetch-params.sh; fi',
@@ -201,7 +201,7 @@ BuildmasterConfig = {
                     repourl='https://github.com/Electric-Coin-Company/libzerocash',
                     mode='incremental',
                 ),
-                sh('git', 'clean', '-dfx'),
+                sh('git', 'clean', '-dfx', name='git clean'),
                 sh('./get-libsnark'),
                 sh('make', '-j4'),
                 sh('./tests/full-test-suite.sh'),
