Join the new channel, #zcash, instead of #zerocash.

--- a/master.cfg
+++ b/master.cfg
@@ -234,7 +234,7 @@ BuildmasterConfig = {
         status.IRC(
             host='irc.oftc.net',
             nick='zcbuildbot',
-            channels=['#zerocash'],
+            channels=['#zcash'],
             notify_events={
                 'exception': True,
                 'failure': True,
